--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.palhackmagic.nextfit" >
 
-    <uses-sdk
-        android:minSdkVersion="28"
-        android:targetSdkVersion="28" />
+<!--    <uses-sdk-->
+<!--        android:minSdkVersion="28"-->
+<!--        android:targetSdkVersion="28" />-->
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
