--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'androidx.wear:wear:1.1.0'
     implementation 'androidx.browser:browser:1.3.0'
     testImplementation 'junit:junit:4.13.2'
