testapi.java can retrieve multiple url data at the in the same intent using function call for each url Listview.java can be ignored for now, has no functionality at this moment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         android:roundIcon="@drawable/newlogo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".data.Testapi"></activity>
+        <activity android:name=".data.model.Listview"/>
+        <activity android:name=".data.Testapi" />
         <activity android:name=".data.Landing" />
         <activity
             android:name=".SignUpActivity"
