--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,13 +33,16 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.google.firebase:firebase-core:11.8.0'
     implementation 'com.google.firebase:firebase-auth:11.8.0'
+    implementation 'com.mikhaellopez:circularimageview:4.2.0'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'androidx.wear:wear:1.1.0'
     implementation 'androidx.browser:browser:1.3.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.google.firebase:firebase-database:19.2.1'
+    implementation 'androidx.cardview:cardview:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
