--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:11.8.0'
     implementation 'com.mikhaellopez:circularimageview:4.2.0'
     implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'com.tomer:fadingtextview:2.5'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
